--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -8,5 +8,52 @@
   "viewExpenses": "View Expenses",
   "inventory": "Inventory",
   "viewMeals": "View Meals",
-  "recipeTips": "Recipe Tips"
+  "recipeTips": "Recipe Tips",
+  "customizeCategories": "Customize Categories",
+  "removeAllCategories": "Remove All Categories",
+  "meat": "Meat",
+  "fish": "Fish",
+  "pasta_bread_rice": "Pasta, Bread and Rice",
+  "sauces_condiments": "Sauces and Condiments",
+  "vegetables": "Vegetables",
+  "fruit": "Fruit",
+  "dairy_products": "Dairy Products",
+  "water": "Water",
+  "dessert": "Dessert",
+  "salty_snacks": "Salty Snacks",
+  "drinks": "Drinks",
+  "save": "Save",
+  "cancel": "Cancel",
+  "selectMealType": "Select Meal Type",
+  "insertMealType": "Insert Meal",
+  "save_meal": "Save Meal",
+  "search": "Search",
+  "selectedProducts": "Selected Products",
+  "noSelectedProducts": "No selected products",
+  "listProducts": "List of Products",
+  "searchProductByName": "Search product by name",
+  "insertProductName": "Insert product name",
+  "edit_macronutrient": "Edit Macronutrient",
+  "change_name_to": "Change name to",
+  "edit_value_100g": "Edit value (100g)",
+  "macronutrient": "Macronutrient",
+  "valuePer100g": "Value (100g)",
+  "actions": "Actions",
+  "nameLabel": "Name",
+  "valueLabel": "Value (100g)",
+  "addButtonTooltip": "Add macronutrient",
+  "editButtonTooltip": "Edit macronutrient",
+  "saveButtonTooltip": "Save changes",
+  "deleteButtonTooltip": "Delete macronutrient",
+  "energy": "Energy",
+  "fats": "Fats",
+  "proteins": "Proteins",
+  "carbohydrates": "Carbohydrates",
+  "sugars": "Sugars",
+  "fiber": "Fiber",
+  "saturatedFats": "Saturated Fats",
+  "monounsaturatedFats": "Monounsaturated Fats",
+  "polyunsaturatedFats": "Polyunsaturated Fats",
+  "cholesterol": "Cholesterol",
+  "sodium": "Sodium"
 }
