--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -8,5 +8,52 @@
   "viewExpenses": "Visualizza spese",
   "inventory": "Inventario",
   "viewMeals": "Visualizza pasti",
-  "recipeTips": "Consigli per la ricetta"
+  "recipeTips": "Consigli per la ricetta",
+  "customizeCategories": "Personalizza categorie",
+  "removeAllCategories": "Rimuovi tutte le categorie",
+  "meat": "Carne",
+  "fish": "Pesce",
+  "pasta_bread_rice": "Pasta, Pane e Riso",
+  "sauces_condiments": "Salse e Condimenti",
+  "vegetables": "Verdure",
+  "fruit": "Frutta",
+  "dairy_products": "Latticini",
+  "water": "Acqua",
+  "dessert": "Dolce",
+  "salty_snacks": "Snack salati",
+  "drinks": "Bevande",
+  "save": "Salva",
+  "cancel": "Annulla",
+  "selectMealType": "Seleziona il tipo di pasto",
+  "insertMealType": "Inserisci pasto",
+  "save_meal": "Salva pasto",
+  "search": "Cerca",
+  "selectedProducts": "Prodotti selezionati",
+  "noSelectedProducts": "Nessun prodotto selezionato",
+  "listProducts": "Elenco dei prodotti",
+  "searchProductByName": "Cerca prodotto per nome",
+  "insertProductName": "Inserisci nome del prodotto",
+  "edit_macronutrient": "Modifica Macronutriente",
+  "change_name_to": "Cambia nome in",
+  "edit_value_100g": "Modifica valore (100g)",
+  "macronutrient": "Macronutriente",
+  "valuePer100g": "Valore (100g)",
+  "actions": "Azioni",
+  "nameLabel": "Nome",
+  "valueLabel": "Valore (100g)",
+  "addButtonTooltip": "Aggiungi macronutriente",
+  "editButtonTooltip": "Modifica macronutriente",
+  "saveButtonTooltip": "Salva modifiche",
+  "deleteButtonTooltip": "Elimina macronutriente",
+  "energy": "Energia",
+  "fats": "Grassi",
+  "proteins": "Proteine",
+  "carbohydrates": "Carboidrati",
+  "sugars": "Zuccheri",
+  "fiber": "Fibra",
+  "saturatedFats": "Grassi Saturi",
+  "monounsaturatedFats": "Grassi Monoinsaturi",
+  "polyunsaturatedFats": "Grassi Polinsaturi",
+  "cholesterol": "Colesterolo",
+  "sodium": "Sodio"
 }
