go on with the translate process

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -51,9 +51,45 @@
   "carbohydrates": "Carbohydrates",
   "sugars": "Sugars",
   "fiber": "Fiber",
-  "saturatedFats": "Saturated Fats",
-  "monounsaturatedFats": "Monounsaturated Fats",
-  "polyunsaturatedFats": "Polyunsaturated Fats",
+  "saturated_fats": "Saturated Fats",
+  "monounsaturated_fats": "Monounsaturated Fats",
+  "polyunsaturated_fats": "Polyunsaturated Fats",
   "cholesterol": "Cholesterol",
-  "sodium": "Sodium"
+  "sodium": "Sodium",
+  "takePicture": "Take Picture",
+  "chooseFromGallery": "Choose from Gallery",
+  "noImageTaken": "No image taken",
+  "week": "Week",
+  "month": "Month",
+  "year": "Year",
+  "editQuantity": "Edit Quantity",
+  "quantityInKg": "Quantity in weight (kg)",
+  "confirm": "Confirm",
+  "selectedQuantity": "Selected Quantity",
+  "kgAvailable": "kg available",
+  "weightInKg": "Weight (kg)",
+  "units": "Units",
+  "total": "Total",
+  "have": "Owned",
+  "quantity": "Quantity",
+  "fridge": "Fridge",
+  "pantry": "Pantry",
+  "freezer": "Freezer",
+  "other": "Other",
+  "productName": "Product Name",
+  "noImageAvailable": "No image available",
+  "price": "Price",
+  "unitPrice": "Unit Price",
+  "totalWeight": "Total Weight",
+  "pricePerKg": "Price per kg",
+  "unitWeight": "Unit Weight",
+  "category": "Category",
+  "store": "Store",
+  "quantityOwned": "Quantity Owned",
+  "macronutrients": "Macronutrients",
+  "valuesPer100g": "Values (100g)",
+  "expirationDate": "Expiration Date",
+  "supermarket": "Supermarket",
+  "purchaseDate": "Purchase Date",
+  "barcode": "Barcode"
 }
