--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -50,10 +50,48 @@
   "proteins": "Proteine",
   "carbohydrates": "Carboidrati",
   "sugars": "Zuccheri",
-  "fiber": "Fibra",
-  "saturatedFats": "Grassi Saturi",
-  "monounsaturatedFats": "Grassi Monoinsaturi",
-  "polyunsaturatedFats": "Grassi Polinsaturi",
+  "fiber": "Fibre",
+  "saturated_fats": "Grassi Saturi",
+  "monounsaturated_fats": "Grassi Monoinsaturi",
+  "polyunsaturated_fats": "Grassi Polinsaturi",
   "cholesterol": "Colesterolo",
-  "sodium": "Sodio"
+  "sodium": "Sodio",
+  "takePicture": "Scatta foto",
+  "chooseFromGallery": "Scegli dalla galleria",
+  "noImageTaken": "Nessuna immagine scattata",
+  "week": "Settimana",
+  "month": "Mese",
+  "year": "Anno",
+  "editQuantity": "Modifica Quantità",
+  "quantityInKg": "Quantità in peso (kg)",
+  "cancel": "Annulla",
+  "confirm": "Conferma",
+  "selectedQuantity": "Quantità selezionata",
+  "kgAvailable": "kg disponibili",
+  "weightInKg": "Peso (kg)",
+  "units": "Unità",
+  "total": "Totale",
+  "have": "Hai",
+  "quantity": "Quantità",
+  "fridge": "Frigorifero",
+  "pantry": "Dispensa",
+  "freezer": "Freezer",
+  "other": "Altro",
+  "productName": "Nome prodotto",
+  "noImageAvailable": "Immagine non disponibile",
+  "quantity": "Quantità",
+  "price": "Prezzo",
+  "unitPrice": "Prezzo unitario",
+  "totalWeight": "Peso totale",
+  "pricePerKg": "Prezzo per kg",
+  "unitWeight": "Peso unitario",
+  "category": "Categoria",
+  "store": "Negozio",
+  "quantityOwned": "Quantità posseduta",
+  "macronutrients": "Macronutrienti",
+  "valuesPer100g": "Valori (100g)",
+  "expirationDate": "Data di scadenza",
+  "supermarket": "Supermercato",
+  "purchaseDate": "Data di acquisto",
+  "barcode": "Codice a barre"
 }
