--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -65,6 +65,7 @@
   "editQuantity": "Edit Quantity",
   "quantityInKg": "Quantity in weight (kg)",
   "confirm": "Confirm",
+  "update": "Update",
   "selectedQuantity": "Selected Quantity",
   "kgAvailable": "kg available",
   "weightInKg": "Weight (kg)",
@@ -91,5 +92,8 @@
   "expirationDate": "Expiration Date",
   "supermarket": "Supermarket",
   "purchaseDate": "Purchase Date",
-  "barcode": "Barcode"
+  "barcode": "Barcode",
+  "imageUrl": "Image URL",
+  "successAddProduct": "Product added successfully",
+  "newProduct": "New Product"
 }
