--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -64,15 +64,14 @@
   "year": "Anno",
   "editQuantity": "Modifica Quantità",
   "quantityInKg": "Quantità in peso (kg)",
-  "cancel": "Annulla",
   "confirm": "Conferma",
+  "update": "Aggiorna",
   "selectedQuantity": "Quantità selezionata",
   "kgAvailable": "kg disponibili",
   "weightInKg": "Peso (kg)",
   "units": "Unità",
   "total": "Totale",
   "have": "Hai",
-  "quantity": "Quantità",
   "fridge": "Frigorifero",
   "pantry": "Dispensa",
   "freezer": "Freezer",
@@ -93,5 +92,8 @@
   "expirationDate": "Data di scadenza",
   "supermarket": "Supermercato",
   "purchaseDate": "Data di acquisto",
-  "barcode": "Codice a barre"
+  "barcode": "Codice a barre",
+  "imageUrl": "URL dell'immagine",
+  "successAddProduct": "Prodotto aggiunto con successo",
+  "newProduct": "Nuovo Prodotto"
 }
