--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -95,5 +95,38 @@
   "barcode": "Barcode",
   "imageUrl": "Image URL",
   "successAddProduct": "Product added successfully",
-  "newProduct": "New Product"
+  "newProduct": "New Product",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "loginSuccess": "Login successful",
+  "signupSuccess": "Sign up successful",
+  "error": "Error",
+  "login": "Login",
+  "signUp": "Sign Up",
+  "username": "Username",
+  "email": "Email",
+  "password": "Password",
+  "confirmPassword": "Confirm Password",
+  "enterUsername": "Please enter your username",
+  "enterEmail": "Please enter your email",
+  "enterPassword": "Please enter your password",
+  "createAccount": "Create an account",
+  "alreadyHaveAccount": "Already have an account? Login",
+  "editStorage": "Edit Storage",
+  "storageName": "Storage Name",
+  "searchIcon": "Search Icon",
+  "expenseDetailTitle": "Expense Detail",
+  "date": "Date",
+  "totalAmount": "Total",
+  "details": "Details",
+  "home": "Home",
+  "loginRegister": "Login/Register",
+  "menu": "Menu",
+  "changeLanguage": "Change Language",
+  "changeTheme": "Change Theme",
+  "logout": "Logout",
+  "inventoryTitle": "View Inventory",
+  "addStorage": "Add Storage",
+  "mealType": "Meal Type",
+  "totalExpense": "Total Expense",
+  "products": "Products"
 }
