--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -95,5 +95,38 @@
   "barcode": "Codice a barre",
   "imageUrl": "URL dell'immagine",
   "successAddProduct": "Prodotto aggiunto con successo",
-  "newProduct": "Nuovo Prodotto"
+  "newProduct": "Nuovo Prodotto",
+  "passwordsDoNotMatch": "Le password non corrispondono",
+  "loginSuccess": "Accesso effettuato con successo",
+  "signupSuccess": "Registrazione completata con successo",
+  "error": "Errore",
+  "login": "Accedi",
+  "signUp": "Registrati",
+  "username": "Nome utente",
+  "email": "Email",
+  "password": "Password",
+  "confirmPassword": "Conferma password",
+  "enterUsername": "Inserisci il tuo nome utente",
+  "enterEmail": "Inserisci la tua email",
+  "enterPassword": "Inserisci la tua password",
+  "createAccount": "Crea un account",
+  "alreadyHaveAccount": "Hai già un account? Accedi",
+  "editStorage": "Modifica Dispensa",
+  "storageName": "Nome Dispensa",
+  "searchIcon": "Cerca icona",
+  "expenseDetailTitle": "Dettaglio Spesa",
+  "date": "Data",
+  "totalAmount": "Totale",
+  "details": "Dettagli",
+  "home": "Home",
+  "loginRegister": "Accedi/Registrati",
+  "menu": "Menu",
+  "changeLanguage": "Cambia lingua",
+  "changeTheme": "Cambia tema",
+  "logout": "Logout",
+  "inventoryTitle": "Vedere Inventario",
+  "addStorage": "Aggiungi",
+  "mealType": "Tipo di pasto",
+  "totalExpense": "Totale spesa",
+  "products": "Prodotti"
 }
