--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -128,5 +128,40 @@
   "addStorage": "Add Storage",
   "mealType": "Meal Type",
   "totalExpense": "Total Expense",
-  "products": "Products"
+  "products": "Products",
+  "shoppingTitle": "Shopping",
+  "selectSupermarket": "Select a supermarket",
+  "close": "Close",
+  "addSupermarket": "Add Supermarket",
+  "addProduct": "Add Product",
+  "noSavedProducts": "No saved products",
+  "filterByCategory": "Filter by category",
+  "selectCategory": "Select Category",
+  "filter": "Filter",
+  "searchByProductName": "Search by product name",
+  "enterProductName": "Enter product name",
+  "totalBalance": "Total Balance",
+  "saveExpense":"Save Expense",
+  "expenseSaved": "Expense saved successfully!",
+  "userProfile": "User Profile",
+  "name": "Name",
+  "noUserLoggedIn": "No user logged in",
+  "noExpensesFound": "No expenses found",
+  "noExpensesForPeriod": "No expenses found for the selected period",
+  "noMealsFound": "No meals found",
+  "noMealsForPeriod": "No meals found for the selected period",
+  "weekOf": "Week of",
+  "monthOf": "Month of",
+  "jan": "Jan",
+  "feb": "Feb",
+  "mar": "Mar",
+  "apr": "Apr",
+  "may": "May",
+  "jun": "Jun",
+  "jul": "Jul",
+  "aug": "Aug",
+  "sep": "Sep",
+  "oct": "Oct",
+  "nov": "Nov",
+  "dec": "Dec"
 }
