--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -128,5 +128,40 @@
   "addStorage": "Aggiungi",
   "mealType": "Tipo di pasto",
   "totalExpense": "Totale spesa",
-  "products": "Prodotti"
+  "products": "Prodotti",
+  "shoppingTitle": "Fare la spesa",
+  "selectSupermarket": "Seleziona un supermercato",
+  "close": "Chiudi",
+  "addSupermarket": "Aggiungi Supermercato",
+  "addProduct": "Aggiungi Prodotto",
+  "noSavedProducts": "Non ci sono prodotti salvati disponibili",
+  "filterByCategory": "Filtra per categoria",
+  "selectCategory": "Seleziona Categoria",
+  "filter": "Filtra",
+  "searchByProductName": "Cerca per nome del prodotto",
+  "enterProductName": "Inserisci nome del prodotto",
+  "totalBalance": "Saldo totale",
+  "saveExpense":"Salva Spesa",
+  "expenseSaved": "Spesa salvata con successo!",
+  "userProfile": "Profilo Utente",
+  "name": "Nome",
+  "noUserLoggedIn": "Nessun utente connesso",
+  "noExpensesFound": "Nessuna spesa trovata",
+  "noExpensesForPeriod": "Nessuna spesa trovata per il periodo selezionato",
+  "noMealsFound": "Nessun pasto trovato",
+  "noMealsForPeriod": "Nessun pasto trovato per il periodo selezionato",
+  "weekOf": "Settimana del",
+  "monthOf": "Mese di",
+  "jan": "Gen",
+  "feb": "Feb",
+  "mar": "Mar",
+  "apr": "Apr",
+  "may": "Mag",
+  "jun": "Giu",
+  "jul": "Lug",
+  "aug": "Ago",
+  "sep": "Set",
+  "oct": "Ott",
+  "nov": "Nov",
+  "dec": "Dic"
 }
