insert image app, fix add meals bug and small fixes

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -167,5 +167,8 @@
   "nov": "Nov",
   "dec": "Dec",
   "ok": "Ok",
-  "invalidValue": "Invalid value"
+  "invalidValue": "Invalid value",
+  "enterBudget": "Enter budget",
+  "enterAmount": "Enter amount",
+  "suggest": "Suggest"
 }
