--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -167,5 +167,8 @@
   "nov": "Nov",
   "dec": "Dic",
   "ok": "Ok",
-  "invalidValue": "Valore non valido"
+  "invalidValue": "Valore non valido",
+  "enterBudget": "Inserisci il budget",
+  "enterAmount": "Inserisci l'importo",
+  "suggest": "Suggerisci"
 }
