--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -171,5 +171,6 @@
   "enterBudget": "Inserisci il budget",
   "enterAmount": "Inserisci l'importo",
   "suggest": "Suggerisci",
-  "noAvailableProducts": "Nessun prodotto disponibile, prova a cambiare categoria o fare la spesa"
+  "noAvailableProducts": "Nessun prodotto disponibile, prova a cambiare categoria o fare la spesa",
+  "quantityUnitOwned": "Unità possedute:"
 }
