--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -68,7 +68,7 @@
   "update": "Aggiorna",
   "selectedQuantity": "Quantità selezionata",
   "kgAvailable": "kg disponibili",
-    "gramsAvailable": "g disponibili",
+  "gramsAvailable": "g disponibili",
   "weightInKg": "Peso (kg)",
   "weightInGrams": "Peso (g)",
   "units": "Unità",
@@ -172,5 +172,22 @@
   "enterAmount": "Inserisci l'importo",
   "suggest": "Suggerisci",
   "noAvailableProducts": "Nessun prodotto disponibile, prova a cambiare categoria o fare la spesa",
-  "quantityUnitOwned": "Unità possedute:"
+  "quantityUnitOwned": "Unità possedute:",
+  "editProduct": "Modifica Prodotto",
+  "mealDeleted": "Pasto eliminato con successo",
+  "expenseDeleted": "Spesa eliminata con successo",
+  "confirmDeleteExpense": "Sei sicuro di voler eliminare questa spesa?",
+  "no": "No",
+  "yes": "Sì",
+  "confirmDeleteMeal": "Sei sicuro di voler eliminare questo pasto?",
+  "modifyThemeColors": "Modifica colori dell'app",
+  "customizeTheme": "Personalizza Tema",
+  "lightTheme": "Tema Chiaro",
+  "darkTheme": "Tema Scuro",
+  "primaryColor": "Colore Primario",
+  "onPrimaryColor": "Colore On Primary",
+  "secondaryColor": "Colore Secondario",
+  "appBarBackgroundColor": "Colore di Sfondo AppBar",
+  "selectColor": "Seleziona Colore",
+  "colorLabel": "{color}"
 }
