--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -189,5 +189,6 @@
   "secondaryColor": "Secondary Color",
   "appBarBackgroundColor": "AppBar Background Color",
   "selectColor": "Select Color",
-  "colorLabel": "{color}"
+  "colorLabel": "{color}",
+  "daysUntilExpiration": "expiration"
 }
