--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -189,5 +189,6 @@
   "secondaryColor": "Colore Secondario",
   "appBarBackgroundColor": "Colore di Sfondo AppBar",
   "selectColor": "Seleziona Colore",
-  "colorLabel": "{color}"
+  "colorLabel": "{color}",
+  "daysUntilExpiration": "scadenza"
 }
