--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -192,9 +192,9 @@
   "selectColor": "Seleziona Colore",
   "colorLabel": "{color}",
   "daysUntilExpiration": "scadenza",
-    "delete": "Elimina",
+  "delete": "Elimina",
   "confirmDelete": "Sei sicuro di voler eliminare questo supermercato?",
-    "confirmDeleteMessage": "Sei sicuro di voler eliminare {name}?",
+  "confirmDeleteMessage": "Sei sicuro di voler eliminare {name}?",
   "newPassword": "Nuova Password",
   "updatePassword": "Aggiorna Password",
   "passwordUpdated": "Password aggiornata con successo!",
@@ -205,5 +205,7 @@
   "noRecipesFound": "Nessuna ricetta trovata",
   "loadRecipeScreen": "Carica Schermata Ricetta",
   "filterRecipes": "Filtra Ricette",
-  "selectProducts": "Seleziona prodotti che vuoi aggiungere alla ricetta"
+  "selectProducts": "Seleziona prodotti che vuoi aggiungere alla ricetta",
+  "mealSavedSuccessfully": "Pasto salvato con successo",
+  "productDeletedSuccessfully": "Prodotto eliminato con successo"
 }
